objects/OF_SA_Network_Inventory_Attivi__c.object
<CustomObject>
    <fields>
        <fullName>OF_SA_Civico__c</fullName>
        <label>Civico</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_Codice_Via__c</fullName>
        <label>Codice Via</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_Comune__c</fullName>
        <label>Comune</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_Coordinate_Building__c</fullName>
        <label>Coordinate Building</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_GPON_ID__c</fullName>
        <label>GPON ID</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_ID_Building_OM__c</fullName>
        <label>ID Building OM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_ID_Building__c</fullName>
        <label>ID Building</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_ID_Scala__c</fullName>
        <label>ID Scala</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_Indirizzo__c</fullName>
        <label>Indirizzo</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_Particella_Top__c</fullName>
        <label>Particella Top</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_Pop__c</fullName>
        <label>Pop</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_Provincia__c</fullName>
        <label>Provincia</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_Regione__c</fullName>
        <label>Regione</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_Scala_Palazzina__c</fullName>
        <label>Scala Palazzina</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_Stato_Building__c</fullName>
        <label>Stato Building</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OF_SA_Stato_Scala_Palazzina__c</fullName>
        <label>Stato Scala Palazzina</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Network Inventory Attivi</label>
    <nameField>
        <displayFormat>NI-SA-{0000000000}</displayFormat>
        <label>Network Inventory Attivi Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Network Inventory Attivi</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>